--- a/task-stage-2-main/28/index2.html
+++ b/task-stage-2-main/28/index2.html
@@ -7,10 +7,29 @@
 </head>
 <body>
     <script>
-        const age = 10
-        console.log(typeof age)
+        const _underfined = undefined;
+        const _null = null;
+        const _boolean = true;
+        const _number = 5;
+        const _bigInt = 1285195192512111111111111111111112144512412412;
+        const _symbol = Symbol();
+        const _string = "Meow";
+        const _objct = {name: 'Alex'};
+        const _array = [1, 2, 3];
+        const _function = function() {};
+        const _date = new Date();
 
-
+        console.log(typeof _underfined)
+        console.log(typeof _null)
+        console.log(typeof _boolean)
+        console.log(typeof _number)
+        console.log(typeof _bigInt)
+        console.log(typeof _symbol)
+        console.log(typeof _string)
+        console.log(typeof _objct)
+        console.log(typeof _array)
+        console.log(typeof _function)
+        console.log(typeof _date)
     </script>
 </body>
 </html>
