--- a/task-stage-3-main/66 - dop/index.html
+++ b/task-stage-3-main/66 - dop/index.html
@@ -6,6 +6,10 @@
     <title>Задание 66</title>
 </head>
 <body>
+    <select class="js-select">
+        <option selected disabled value="">Выберите категорию</option>
+    </select>
+    <input type="text" placeholder="Поиск" class="js-search">
     <ul class="js-list"></ul>
     <script type="module" src="./index.js"></script>
 </body>
